ECOSCOM-3195 z-indexes corrected which blocked sorting

--- a/src/components/common/grid/Grid/Grid.scss
+++ b/src/components/common/grid/Grid/Grid.scss
@@ -165,29 +165,6 @@ $header-height: 52px;
     height: 34px;
   }
 
-  #{$selector-table} > thead > tr {
-    background: $color-white;
-
-    & > th {
-      top: 0;
-
-      &:nth-child(n) {
-        position: sticky;
-        z-index: 1;
-        background: $color-white;
-      }
-
-      &:first-child {
-        z-index: 2;
-      }
-
-      &:nth-child(1) {
-        z-index: 12;
-        background: $color-white;
-      }
-    }
-  }
-
   &.ecos-grid_checkable {
     .ecos-grid__h-scroll {
       left: 55px;
@@ -197,14 +174,33 @@ $header-height: 52px;
     tbody > tr > td {
       &:first-child {
         position: sticky;
-        z-index: 1;
+        z-index: 3;
         background: $color-white;
         left: 0;
       }
     }
 
     thead > tr > th:first-child {
-      z-index: 2;
+      z-index: 5;
+    }
+  }
+
+  #{$selector-table} > thead > tr {
+    background: $color-white;
+
+    & > th {
+      top: 0;
+
+      &:nth-child(n) {
+        position: sticky;
+        z-index: 10;
+        background: $color-white;
+      }
+
+      &:nth-child(1) {
+        z-index: 15;
+        background: $color-white;
+      }
     }
   }
 }
@@ -212,7 +208,7 @@ $header-height: 52px;
 .ecos-grid__head-shadow {
   display: none;
   position: absolute;
-  z-index: 13;
+  z-index: 7;
   top: 0;
   width: 100%;
   height: $header-height;
@@ -236,5 +232,5 @@ $header-height: 52px;
   left: 49px;
   width: 5px;
   border-right: 2px solid $color-gray-4;
-  z-index: 13;
+  z-index: 10;
 }
